# loop_experiments

./: .gitignore  CMakeLists.txt  ExpMaxLeftStrip  experiments.csv  explog_tmp.csv  explog_tmp3.csv
data/: explog_2d.csv  explog_2d1d.csv  explog_compsbk2.csv  explog_compsbk2_0811.csv  explog_maxtopbox.csv  explog_msegs.csv  explog_omp_mtb.csv  omp_mtb_summary.csv  s.csv  small_exp_explog.csv  speedups.csv  speedups_msegs.csv  speedups_mtb.csv  speedups_w_sizes.csv
plot/: data.py  data_msegs.py  data_mtb.py  plot_2d1d_exp.py  plot_2d_exp.py  plot_3d.py  plot_exps.py  run_2D.py  run_mtb.py
runexps/: run.py  run_2D.py  run_2D_1D.py  run_msegs.py  run_mtb.py  smallrun.py  trace.py
src/: datagen.cpp  datagen.h  global_bal.cpp  gradient1.cpp  gradient2.cpp  increasing_range.cpp  intersecting_ranges.cpp  max_balanced_substr.cpp  max_bot_box.cpp  max_bottom_strip.cpp  max_dist.cpp  max_left_box.cpp  max_left_rec.cpp  max_left_strip.cpp  max_seg_box.cpp  max_seg_strip.cpp  max_top_box.cpp  max_top_box_in_par.cpp  max_top_strip.cpp  minmax.cpp  minmax_col.cpp  mode.cpp  mtlr.cpp  mtrr.cpp  omp_max_bal_sub.cpp  omp_max_bot_box.cpp  omp_max_bottom_strip.cpp  omp_max_top_box.cpp  omp_mtb.cpp  overlapping_ranges.cpp  param.h  pyramid_range.cpp  saddle_point.cpp  sorted2d.cpp  sum2d.cpp  well_balanced.cpp
